move deps to galaxy.yml

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -4,3 +4,10 @@ version: "1.0.8"
 description: "a collection that requires all test collections"
 authors: ["Adrian Likins"]
 license: "GPL-3.0-or-later"
+tags:
+  - collectiontest
+
+dependencies:
+  - alikins.collection_reqs_test
+  - alikins.collection_reqs_1deep_0
+  - alikins.collection_reqs_2deep_0
